--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,21 +35,21 @@
 <label class="validation" id="antallValidation"></label>
 
 <br>
-<label>Fornavn</label>
+<label for="fornavn">Fornavn</label>
 <input type="text" id="fornavn" onchange="valideringFornavn()">
 <label class="validation" id="fornavnValidation"></label>
 
 <br>
-<label>Etternavn</label>
+<label for="etternavn">Etternavn</label>
 <input type="text" id="etternavn" onchange="valideringEtternavn()"/>
 <label class="validation" id="etternavnValidation"></label>
 
 <br>
-<label>Telefonnr</label>
+<label for="number">Telefonnr</label>
 <input type="number" id="number" onchange="valideringNummer()">
 <label class="validation" id="numberValidation"></label>
 <br>
-<label>Epost</label>
+<label for="email">Epost</label>
 <input type="email" id="email" onchange="valideringEpost()">
 <label class="validation" id="epostValidation"></label>
 <br>
